API-31520 - Try to prevent survey questions from wrapping

--- a/src/styles/touchstone-survey-overrides.scss
+++ b/src/styles/touchstone-survey-overrides.scss
@@ -14,3 +14,7 @@ body .fba-modal-dialog {
 .fba-modal-dialog .usa-radio__input--tile + [class*=__label]::before {
   margin-top: 3px;
 }
+
+.usa-legend, .usa-label {
+  text-wrap: nowrap;
+}
